--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,13 @@
     <queries>
     <intent>
         <action android:name="android.speech.RecognitionService" />
+    </intent>
+    </queries>
+    <queries>
+    <intent>
         <action android:name="android.intent.action.TTS_SERVICE" />
     </intent>
-</queries>
+    </queries>
     <application
         android:label="gemini_assistant"
         android:name="${applicationName}"
