--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_tts: ^3.2.2
   google_generative_ai: ^0.2.0
+  marquee: ^2.2.3
   speech_to_text: ^6.6.0
 
 dev_dependencies:
